Fix margin error on mobile

--- a/app/assets/stylesheets/_landing.scss
+++ b/app/assets/stylesheets/_landing.scss
@@ -231,6 +231,9 @@ footer {
     margin: inherit;
     height: auto;
   }
+  .landing-container {
+    margin: auto;
+  }
 }
 
 @media only screen and (max-height: 500px) {
